poprawienie zadania 2 z debuggera

--- a/1-debugger/2-zadanie/index.html
+++ b/1-debugger/2-zadanie/index.html
@@ -21,15 +21,15 @@
         </p>
         <form class="form">
             <div class="form-col">
-                <label for="nr1">Wpisz pierwszą liczbę</label>
+                <label class="form-label" for="nr1">Wpisz pierwszą liczbę</label>
                 <input type="text" id="nr1" class="form-input">
             </div>
             <div class="form-col">
-                <label for="nr2">Wpisz drugą liczbę</label>
+                <label class="form-label" for="nr2">Wpisz drugą liczbę</label>
                 <input type="text" id="nr2" class="form-input">
             </div>
             <div class="form-col">
-                <button type="submit" class="form-btn">Dodaj</button>
+                <button type="submit" class="form-btn form-submit">Dodaj</button>
             </div>
         </form>
 
